...
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_74pxv"
            android:layout_width="match_parent"
            android:text="Hello! Welcome to Sprinter."
            style="@style/txtPlayfairDisplayromanbold36" tools:text="@string/msg_hello_welcome"/>
        <FrameLayout android:id="@+id/welcomeLoginButton"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_57pxv"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_174pxv" android:layout_width="@dimen/_253pxh">
            <View
...
                android:layout_marginTop="@dimen/_15pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:text="Login"
                style="@style/txtPlayfairDisplayromansemibold20" tools:text="LOGIN"/>
        </FrameLayout>
        <FrameLayout android:id="@+id/welcomeSignupButton"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_57pxv"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_36pxh"
            android:layout_marginStart="@dimen/_36pxh"
            android:layout_marginTop="@dimen/_65pxv" android:layout_width="@dimen/_253pxh">
...
